Prepare Major version 6:
- Bumped version to 6.0.0-SNAPSHOT
- Removed deprecated methods and classes
- Updated readme
- Updated Junit to Junit 6
- Updated github actions to build/test/deploy with JDK 21 and 25
- Updated dependencies and plugins